# FMCGBOT

./: .env.example  .gitignore  .mcp.json  README.md  nat_workflow.yaml  pyproject.toml  requirements.txt
data/structured/: fmcg.db
data/unstructured/: category_review_snacks_fy25.md  finance_note_discount_depth_guidance.md  finance_note_discount_depth_guidance_may2024_superseded.md  fy25_annual_business_review_summary.md  market_report_beverages_summer_2025.md  market_report_breakfast_cereals_fy25_q3.md  product_launch_memo_homeglow_bodywash.md  product_launch_memo_nutrioat_gold.md  promo_playbook_clean_home_drive.md  promo_playbook_festive_harvest_2024.md
docs/: README.md  architecture.md  attribute-mapping.md  cost-latency-tradeoffs.md  design-decisions.md  improvement-roadmap.md
notebooks/: _build_notebook.py  demo.ipynb
src/: nat_plugin.py  qna_agent.py  ui.py
src/agents/: coding_agent.py  structured_agent.py  unstructured_agent.py  websearch_agent.py
src/core/: formatting.py  intent.py  llm_adapters.py  llm_client.py  memory.py  orchestrator.py  tracing.py
src/data_gen/: generate_data.py
src/tools/: code_tool.py  doc_retrieval_tool.py  sql_tool.py  websearch_tool.py
tests/: eval_framework.py  test_intent.py  test_sql_guard.py
