[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fmcgqabot"
version = "0.1.0"
description = "Enterprise FMCG Q&A agent prototype with NeMo Agent Toolkit integration"
requires-python = ">=3.11"
dependencies = [
    "agno==2.7.1",
    "duckdb==1.5.4",
    "faker==40.28.1",
    "pytest==9.1.1",
    "nbformat==5.10.4",
    "nbclient==0.11.0",
    "ipykernel==7.3.0",
    "jupyter==1.1.1",
    "google-genai==1.31.0",
]

[project.optional-dependencies]
nat = [
    "nvidia-nat",
    "nvidia-nat-agno",
    "langchain-core",
]
ui = [
    "streamlit>=1.40.0",
]
gemini = [
    "google-genai>=1.31.0",
]
anthropic = [
    "anthropic>=0.49.0",
]
openai = [
    "openai>=1.70.0",
]
all = [
    "google-genai>=1.31.0",
    "anthropic>=0.49.0",
    "openai>=1.70.0",
]

[project.entry-points."nat.plugins"]
fmcgqabot = "src.nat_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
